--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,54 +6,84 @@ buildscript {
     }
 
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
         classpath("io.spring.gradle:dependency-management-plugin:0.5.1.RELEASE")
         classpath('se.transmode.gradle:gradle-docker:1.2')
     }
 }
 
 apply plugin: 'groovy'
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'maven'
 apply plugin: 'spring-boot'
-springBoot {
-    layout = 'ZIP'
-}
 apply plugin: 'io.spring.dependency-management'
 apply plugin: "jacoco"
 apply plugin: 'docker'
+apply plugin: 'sonar-runner'
+group = 'com.redbee.io'
+
+springBoot {
+    layout = 'ZIP'
+}
+
+ext {
+    springBootVersion = '1.3.3.RELEASE'
+    springVersion='4.2.5.RELEASE'
+    nexusUser = "admin"
+    nexusPassword = "R3dB33575"
+    nexusUrl =  "http://repo.dev.redbee.io:80/content/repositories/releases/"
+    nexusSnapshot = "http://repo.dev.redbee.io:80/content/repositories/snapshots/"
+}
+
 
 jar {
-    baseName = 'com-giu-api'
+    baseName = 'com-virtual-tom-api'
 }
 version = '0.0.1'
+
+repositories {
+        mavenCentral()
+        mavenLocal()
+        jcenter()
+        maven {
+            credentials {
+                username "${nexusUser}"
+                password "${nexusPassword}"
+            }
+            url "${nexusUrl}"
+        }
+        maven {
+            credentials {
+                username "${nexusUser}"
+                password "${nexusPassword}"
+            }
+            url "${nexusSnapshot}"
+        }
+    }
 
 dependencies {
     //Spring dependencies
     compile "ch.qos.logback:logback-classic:1.1.5"
     compile "ch.qos.logback:logback-access:1.1.5"
     compile "ch.qos.logback:logback-core:1.1.5"
-    compile "org.springframework.boot:spring-boot:${springBootVersion}"
-    compile "org.springframework.boot:spring-boot-starter:${springBootVersion}"
-    //compile "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
-    //compile "org.springframework.boot:spring-boot-starter-jdbc:${springBootVersion}"
-    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
-    compile "org.springframework.boot:spring-boot-actuator:${springBootVersion}"
-    compile "org.springframework.boot:spring-boot-starter-mail:${springBootVersion}"
-    //compile "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
-    compile "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}"
-    //compile "org.springframework.security:spring-security-aspects"
-    compile "org.springframework.cloud:spring-cloud-starter-config"
-    //testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
-    compile 'org.springframework.security.oauth:spring-security-oauth2:2.0.5.RELEASE'
+    compile "org.springframework.boot:spring-boot:1.3.3.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter:1.3.3.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-web:1.3.3.RELEASE"
+    compile "org.springframework.boot:spring-boot-actuator:1.3.3.RELEASE"
     compile 'org.springframework.data:spring-data-commons:1.12.1.RELEASE'
+    testCompile "junit:junit:4.8.2"
+    testCompile "org.mockito:mockito-core:1.+"
+    compile "org.springframework:spring-core:4.2.5.RELEASE"
+    compile "org.springframework:spring-context:4.2.5.RELEASE"
+    compile "org.springframework:spring-aop:4.2.5.RELEASE"
+    compile "org.springframework:spring-tx:4.2.5.RELEASE"
+    compile "org.springframework:spring-web:4.2.5.RELEASE"
+    compile "org.springframework:spring-expression:4.2.5.RELEASE"
+    compile "org.springframework:spring-orm:4.2.5.RELEASE"
+    compile "org.springframework:spring-beans:4.2.5.RELEASE"
+    compile "org.springframework:spring-aspects:4.2.5.RELEASE"
 
-    compile 'org.springframework.data:spring-data-redis:1.6.2.RELEASE'
-    compile 'redis.clients:jedis:2.8.0'
-
-    compile 'org.apache.velocity:velocity:1.6.2'
-
-    compile 'org.springframework.ldap:spring-ldap-core:2.1.0.RELEASE'
-
-    compile project(':giu-repository')
 
     //Test dependencies
     testCompile 'cglib:cglib-nodep:3.1'
@@ -71,14 +101,7 @@ task uploadNexus() {
     }
 }
 
-uploadArchives.dependsOn('uploadNexus')
-
-
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-config:1.0.2.RELEASE'
-    }
-}
+uploadArchives.dependsOn('uploadNexus') 
 
 jacocoTestReport {
     reports {
