--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,3 +1,6 @@
+group 'com.redbee'
+version '1.1.0'
+
 buildscript {
     repositories {
         mavenCentral()
@@ -10,15 +13,46 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'maven'
 apply plugin: 'spring-boot'
 
+ext {
+    nexusUser = "admin"
+    nexusPassword = "R3dB33575"
+    nexusUrl = "http://repo.dev.redbee.io:80/content/repositories/releases/"
+    nexusSnapshot = "http://repo.dev.redbee.io:80/content/repositories/snapshots/"
+}
+
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+}
+
 jar {
-    baseName = 'gs-accessing-data-mongodb'
+    baseName = 'beertual-tom-repository'
     version =  '0.1.0'
 }
 
 repositories {
     mavenCentral()
+
+    maven {
+        credentials {
+            username "${nexusUser}"
+            password "${nexusPassword}"
+        }
+        url "${nexusUrl}"
+    }
+    maven {
+        credentials {
+            username "${nexusUser}"
+            password "${nexusPassword}"
+        }
+        url "${nexusSnapshot}"
+    }
 }
 
 sourceCompatibility = 1.8
@@ -32,3 +66,27 @@ dependencies {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "${nexusUrl}") {
+                authentication(userName: "${nexusUser}",
+                        password: "${nexusPassword}")
+            }
+            snapshotRepository(url: "${nexusSnapshot}") {
+                authentication(userName: "${nexusUser}",
+                        password: "${nexusPassword}")
+            }
+        }
+    }
+}
+
+task uploadNexus() {
+    if(project.hasProperty('release')){
+        println "Release $project.release"
+        project.version = project.release
+    }
+}
+
+uploadArchives.dependsOn('uploadNexus')
