--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -60,6 +60,7 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+    compile group: 'org.json', name: 'json', version: '20160810'
     testCompile("junit:junit")
 }
 
