--- a/sso/build.gradle
+++ b/sso/build.gradle
@@ -161,7 +161,7 @@ task buildDocker(type: Docker, dependsOn: build) {
     volume("/tmp", "/newrelic", "/log")
     addFile("${jar.baseName}-${project.version}.jar", "app.jar")
     runCommand("bash -c 'touch /app.jar'")
-    entryPoint(["java","-Djava.security.egd=file:/dev/./urandom", "-javaagent:/newrelic/newrelic.jar","-jar","/app.jar"])
+    entryPoint(["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"])
 }
 
 
