--- a/bot/app/pom.xml
+++ b/bot/app/pom.xml
@@ -170,12 +170,17 @@
 						<imageName>beebot</imageName>
 						<baseImage>java:8</baseImage>
 						<!-- <dockerDirectory>docker</dockerDirectory> -->
-						<entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
+						<entryPoint>["java", "-cp", "${project.build.finalName}.jar:lib/*", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
 						<resources>
 							<resource>
 								<targetPath>/</targetPath>
 								<directory>${project.build.directory}</directory>
 								<include>${project.build.finalName}.jar</include>
+							</resource>
+							<resource>
+								<targetPath>/lib</targetPath>
+								<directory>${project.build.directory}/dependency</directory>
+								<include>*.jar</include>
 							</resource>
 						</resources>
 						<imageTags>
