--- a/api/build.gradle
+++ b/api/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web:1.3.3.RELEASE"
     compile "org.springframework.boot:spring-boot-actuator:1.3.3.RELEASE"
     compile 'org.springframework.data:spring-data-commons:1.12.1.RELEASE'
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb"
 
     testCompile "junit:junit:4.8.2"
     testCompile "org.mockito:mockito-core:1.+"
@@ -83,7 +84,7 @@ dependencies {
     compile "org.springframework:spring-orm:4.2.5.RELEASE"
     compile "org.springframework:spring-beans:4.2.5.RELEASE"
     compile "org.springframework:spring-aspects:4.2.5.RELEASE"
-    compile group: 'com.redbee', name: 'beertual-tom-repository', version: '1.2.0'
+//    compile group: 'com.redbee', name: 'beertual-tom-repository', version: '1.6.0'
 
     compile 'org.codehaus.groovy:groovy-all:2.4.5'
 
