--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=172.30.0.162
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=tom
