Event Strategy for bot

--- a/bot/app/pom.xml
+++ b/bot/app/pom.xml
@@ -83,6 +83,11 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+    		<groupId>commons-beanutils</groupId>
+    		<artifactId>commons-beanutils</artifactId>
+    		<version>1.9.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
