--- a/bot/app/pom.xml
+++ b/bot/app/pom.xml
@@ -27,6 +27,13 @@
 	</dependencyManagement>
 
 	<dependencies>
+
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambots</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-grizzly2-http</artifactId>
