--- a/bot/app/pom.xml
+++ b/bot/app/pom.xml
@@ -95,6 +95,12 @@
     		<artifactId>commons-beanutils</artifactId>
     		<version>1.9.3</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
