--- a/api/build.gradle
+++ b/api/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     compile "org.springframework.boot:spring-boot-actuator:1.3.3.RELEASE"
     compile 'org.springframework.data:spring-data-commons:1.12.1.RELEASE'
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
+    compile("org.springframework.boot:spring-boot-starter-security:1.3.3.RELEASE")
+    compile "org.springframework.security.oauth:spring-security-oauth2:2.0.10.RELEASE"
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.1.3.RELEASE'
 
     testCompile "junit:junit:4.8.2"
     testCompile "org.mockito:mockito-core:1.+"
